# archcomp

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Untitled Diagram.xml  cmake_install.cmake
HardDrive/: CMakeLists.txt  hd_tr_interface.c  hd_tr_interface.h  main.c
Main/: CMakeLists.txt  Main  Makefile  asm.c  basic.c  cmake_install.cmake  commands.c  main.c  rpn.c  terminal.c  terminal.h
Main/head/: asm.h  basic.h  commands.h  rpn.h  terminal.h
lab1/: CMakeLists.txt  Makefile  SimpleComputer.c  SimpleComputer.h  cmake_install.cmake  lab1  main.c  memSave
lab1/head/: SimpleComputer.h
lab2/: CMakeLists.txt  Makefile  cmake_install.cmake  lab2  main.c  term.c  term.h
lab2/head/: term.h
lab3/: BIG_CHARS  CMakeLists.txt  Makefile  cmake_install.cmake  graph.c  graph.h  lab3  main.c
lab3/head/: graph.h
lab4/: CMakeLists.txt  Makefile  cmake_install.cmake  lab4  main.c  rk.c  rk.h
lab4/head/: rk.h
lab5/: main.c  readkey.c  readkey.h
lab6/: hard.c  hard.h
